# luggage_av

./: CMakeLists.txt
launch/: gz_sim.launch.py  robot_state_publisher.launch.py  rviz_laser.launch.py
parameters/: gz_bridge.yaml  gz_ros2_control.yaml
rviz/: view_bot_laser.rviz
urdf/: gz_ros2_control.xacro  lidar.xacro  params.xacro  robot.urdf.xacro
